# learning-rust

./: Cargo.toml  README.md  hello
01_basic_concepts/: shadowing.rs
02_functions/: basic.rs
03_control_flow/: for.rs  if.rs
04_ownership/: dereference_function.rs  owner.rs  reference_function.rs  scope.rs
06_another_patterns/: match.rs
08_common_collections/: hash_maps.rs  strings.rs
09_error_handling/: closures.rs
10_generics_traits_lifetimes/: generic_types.rs  lifetime.rs  traits.rs
actix_demo/: Cargo.toml  README.md
actix_demo/src/: main.rs
learning_rust/01_basic_concepts/: 2variables.rs  4scalar_types.rs  5compound_types.rs
learning_rust/03_control_flow/: loop.rs
learning_rust/04_ownership/: owner_function.rs  slices.rs
learning_rust/05_structs/: basic_structure.rs  methods.rs
learning_rust/06_another_patterns/: enums.rs  option_enum.rs
learning_rust/08_common_collections/: vectors.rs
learning_rust/09_error_handling/: result.rs
learning_rust/src/: main.rs
src/: main.rs
