[package]
name = "actix_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
paperclip = { version = "0.8.0", features = ["actix4", "swagger-ui", "uuid"] }
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
uuid = { version = "1.3.1", features = ["serde", "v4"] }

